--- a/MusicApp/Base.lproj/Main.storyboard
+++ b/MusicApp/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -22,6 +21,10 @@
                                 <rect key="frame" x="20" y="140" width="374" height="51"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Fw0-rl-O1o">
                                 <rect key="frame" x="0.0" y="191" width="414" height="622"/>
@@ -108,6 +111,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Favorites" id="4dL-UN-RSW"/>
                     <connections>
+                        <outlet property="searchBar" destination="wqG-KA-DnW" id="iEG-Iw-0IL"/>
                         <outlet property="tableView" destination="Fw0-rl-O1o" id="cVE-Ng-w2u"/>
                         <segue destination="192-KM-nMM" kind="presentation" identifier="FavoritesToPlaying" id="WjV-xI-rSR"/>
                     </connections>
@@ -636,7 +640,7 @@
                                         <rect key="frame" x="20" y="513.5" width="374" height="64"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Zpn-Rh-sD4">
-                                                <rect key="frame" x="0.0" y="0.0" width="329" height="64"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="324.5" height="64"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[Nome música]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdD-pb-uG4">
                                                         <rect key="frame" x="0.0" y="0.0" width="194" height="33.5"/>
@@ -653,17 +657,14 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58x-fy-Hom">
-                                                <rect key="frame" x="349" y="14" width="25" height="36"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="25" id="0Su-rE-QbT"/>
-                                                    <constraint firstAttribute="height" constant="36" id="aVn-XD-WwZ"/>
-                                                </constraints>
+                                                <rect key="frame" x="344.5" y="14" width="29.5" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <color key="tintColor" systemColor="systemRedColor"/>
-                                                <state key="normal">
-                                                    <color key="titleColor" systemColor="systemRedColor"/>
-                                                    <imageReference key="image" image="heart.fill" catalog="system" symbolScale="large"/>
+                                                <color key="tintColor" systemColor="secondaryLabelColor"/>
+                                                <state key="normal" image="heart" catalog="system">
+                                                    <color key="titleColor" systemColor="secondaryLabelColor"/>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="24"/>
                                                 </state>
+                                                <state key="selected" image="heart.fill" catalog="system"/>
                                                 <connections>
                                                     <action selector="toggleFavorite:" destination="rWh-zg-2iI" eventType="touchUpInside" id="2iG-V1-ggo"/>
                                                 </connections>
@@ -868,9 +869,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
